# python-uv-template

./: LICENSE  README.md  app.py  pyproject.toml  setup-template.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/myproject/: __init__.py
tests/: test_core.py
